Update get userid logic for the board

--- a/Frontend/src/app/app.component.html
+++ b/Frontend/src/app/app.component.html
@@ -18,8 +18,10 @@
       Logout
     </button>
 
-    <div *ngIf="userId">
-      Hello, {{ userId }}
+    <div *ngIf="isLoggedIn">
+      <div class="userIdTable">
+        Hello, {{ userId }}
+      </div>
     </div>
   </nav>
 </div>
