change refer for display username

--- a/Frontend/src/app/app.component.html
+++ b/Frontend/src/app/app.component.html
@@ -20,7 +20,7 @@
 
     <div *ngIf="isLoggedIn">
       <div class="userIdTable">
-        Hello, {{ userId }}
+        Hello, {{ username }}
       </div>
     </div>
   </nav>
