--- a/Frontend/src/app/dm/dm.component.scss
+++ b/Frontend/src/app/dm/dm.component.scss
@@ -37,6 +37,7 @@
   flex-direction: column;
   width: 40%;
   align-items: center;
+  flex-wrap: wrap;
 
   justify-content: end;
   border: 1px solid #999999;
