--- a/Frontend/src/app/board/board.component.scss
+++ b/Frontend/src/app/board/board.component.scss
@@ -137,6 +137,10 @@
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
+
+   justify-content: center;
+   align-items: center;
+   margin: 12px 9px;
  }
 
  .updateModeButton{
