--- a/Frontend/src/app/dm/dm.component.scss
+++ b/Frontend/src/app/dm/dm.component.scss
@@ -58,9 +58,23 @@
 }
 
 .messageContainer{
+  min-width: 384px;
   margin-bottom: 5px;
 }
 
+/* 현재 사용자의 메시지: 우측 정렬 */
+.myMessage {
+  background-color: #daf8cb;
+  align-self: flex-end;
+  text-align: right;
+}
+
+/* 다른 사용자의 메시지: 좌측 정렬 */
+.otherMessage {
+  background-color: #f1f0f0;
+  align-self: flex-start;
+  text-align: left;
+}
 
 .sendDm {
   font-size: large;
