--- a/Frontend/src/app/dm/dm.component.html
+++ b/Frontend/src/app/dm/dm.component.html
@@ -13,7 +13,7 @@
     <p> DM Now {{ selectedReceiverUsername }}</p>
     <!-- 해당 메시지 목록에 스크롤 추가하기  -->
     <!-- Max-height 추가 -->
-    <div class="messageListContainer" #scrollMe>
+    <div class="messageListContainer" #messageListContainer>
       <div class="messageContainer" *ngFor="let msg of messages"
       [ngClass]="{'myMessage': msg.senderUsername === username, 'otherMessage': msg.senderUsername !== username}">
         <strong *ngIf="msg.senderUsername !== username">{{ msg.senderUsername }}:</strong>
