--- a/Frontend/src/app/post/post.component.scss
+++ b/Frontend/src/app/post/post.component.scss
@@ -1,7 +1,7 @@
 .postContainer {
   display: flex;
   flex-direction: column;
-  width: 100%;
+  // width: 100%;
 
   margin: 9px 12px;
   border: 1px solid #000000;
@@ -49,6 +49,11 @@
       margin: 2px 2px;
     }
   }
+}
+
+.objektFilterForm {
+  margin: 9px 12px;
+  flex-wrap: wrap;
 }
 
 button {
