Design Update and New button for direct reach my post

--- a/Frontend/src/app/board/board.component.html
+++ b/Frontend/src/app/board/board.component.html
@@ -63,6 +63,11 @@
 </div>
 
 <div class="postButton">
+  <!-- 내 포스트 찾기 -->
+  <button type="button" (click)="getMyPost()">
+    My Post
+  </button>
+
   <!-- 포스팅 기반으로 찾기 -->
   <button type="button" (click)="searchWithPosting()">
     Search Matching for post
